# Optihire

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/backend/: README.md  pyproject.toml  requirements.txt  test_create_resume.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0318513b4e03_add_file_path_and_url_to_resumes.py  477144644922_add_optihire_schema_with_supabase_auth_.py  af2d60eacb40_test_run.py  b4e8a9c2d1f3_add_processing_status_to_resumes.py  c5f9d3e1a2b4_add_raw_text_to_resumes.py
apps/backend/app/: main.py
apps/backend/app/api/v1/: __init__.py
apps/backend/app/api/v1/endpoints/: resumes.py  resumes_backup.py  system_api.py  user_api.py
apps/backend/app/core/: config.py  dependencies.py  jwt.py  logging_config.py  utils.py
apps/backend/app/db/: session.py
apps/backend/app/middleware/: auth.py  logging_middleware.py
apps/backend/app/models/: __init__.py  analysis_model.py  file_model.py  resume_model.py  user_model.py
apps/backend/app/schemas/: __init__.py  analysis_schema.py  application_schema.py  common_schema.py  content_schema.py  file_schema.py  job_schema.py  log_schema.py  resume_schema.py  system_schema.py  user_schema.py
apps/backend/app/services/: __init__.py  pdf_service.py  resume_service.py  storage_service.py  user_service.py
apps/backend/tests/: conftest.py  test_api_integration.py  test_file_size.py  test_middleware_auth.py  test_parser.py  test_raw_text_storage.py  test_scope_enforcement.py
apps/frontend/: biome.json  next.config.ts  package.json  tsconfig.json
src/app/: page.tsx  (+1 more)
(+77 files in other folders)
