[project]
name = "optihire-backend"
version = "0.1.0"
description = "OptiHire Backend API"
requires-python = ">=3.10"

[tool.ruff]
# Set line length to match common Python standards
line-length = 88

# Target Python 3.10+
target-version = "py310"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "alembic/versions",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable recommended rules + additional useful ones
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]

# Ignore specific rules if needed
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # FastAPI uses function calls in defaults (Depends)
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["app"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false
